@@ -1,5 +1,9 @@
 2005-01-10  Davyd Madeley  <davyd@madeley.id.au>
 
+	* properties.c: Help button for Shaun.
+
+2005-01-10  Davyd Madeley  <davyd@madeley.id.au>
+
 	* Makefile.am:
 	* global.h:
 	* linux-proc.[ch]:
